<resources>
    <string name="app_name">Coptic Church Directory</string>
        <string name="app_name1">Intro Slider</string>
        <string name="title_activity_welcome">Home Screen</string>
        <string name="next">Next</string>
        <string name="skip">Skip</string>
        <string name="start">Proceed</string>

        <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
        <string name="play_again">Play Again</string>
    <string name="church">church</string>
    <string name="i_sought_i_found">I sought + I found</string>
    <string name="locates">Coptic Church Directory locates the nearest monastery, retreat center, and Coptic community.</string>
    <string name="a_church_near_me">A church near me</string>
    <string name="find">Find the local church in your neighborhood by simply inputting your zip code or address in the search box</string>
    <string name="find_information">Find Information</string>
    <string name="info">Coptic Church Directory displays important church information such as clergy contact details and church phone numbers</string>
    <string name="title">Coptic Church Directory</string>
    <string name="descrip">Coptic Church Directory locates the nearest church, monastery, retreat center, and Coptic community.</string>
    <string name="pray">Pray for this service</string>
    <string name="ack">Acknowledgements</string>
    <string name="share">Share</string>
    <string name="acktext">Content such as the description of the church history, church information, and serving clergy have been collected from the various diocese websites. These include the Diocese of Los Angeles, Southern California, and Hawaii, the Diocese of the Southern United States and the Diocese of New York and New England.</string>
    <string name="acktext1">Nihov’s Worldwide Coptic Directory was also used and played an instrumental role in finding many of the churches along with the description of the church and the serving priest(s)</string>
    <string name="map_marker">map-marker</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="suscopts">suscopts</string>
    <string name="lacopts">lacopts</string>
    <string name="nynecopts">nynecopts</string>
</resources>
