<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <ImageView
            android:layout_width="286dp"
            android:layout_height="0dp"
            android:src="@drawable/image_01"
            android:contentDescription="@string/church"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.64" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/locates"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textAlignment="center" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_sought_i_found"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="18dp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>